// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/test/stories/transferwise.test.ts host.currency = payee.currency != expense.currency = collective.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ |
| EXPENSE | Expense in EUR | CREDIT | 10099     | -105       | 10761                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -105       | -10656               | -10099                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency = collective.currency != host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ |
| EXPENSE | Expense in EUR | CREDIT | 10080     | -85        | 10742                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -85        | -10657               | -10080                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency = collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ |
| EXPENSE | Expense in USD | CREDIT | 10080     | -80        | 10080                | 10000                         | Donnortello | USD      | Babel USD              | NULL                   | USD          |
| EXPENSE | Expense in USD | DEBIT  | -10000    | -80        | -10000               | -10080                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency != collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ |
| EXPENSE | Expense in EUR | CREDIT | 10739     | -83        | 10739                | 10656                         | Donnortello | USD      | Babel USD              | NULL                   | USD          |
| EXPENSE | Expense in EUR | DEBIT  | -10656    | -83        | -10656               | -10739                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency = collective.currency != host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ |
| EXPENSE | Expense in EUR | CREDIT | 10078     | -83        | 10739                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -83        | -10656               | -10078                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency = collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ |
| EXPENSE | Expense in USD | CREDIT | 10105     | -105       | 10105                | 10000                         | Donnortello | USD      | Babel USD              | NULL                   | USD          |
| EXPENSE | Expense in USD | DEBIT  | -10000    | -105       | -10000               | -10105                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |"
`;
